--- a/public/.htaccess
+++ b/public/.htaccess
@@ -5,4 +5,8 @@
   RewriteCond %{REQUEST_FILENAME} !-d
   RewriteCond %{REQUEST_FILENAME} !-f
   RewriteRule ^(.*)$ index.php/$1 [QSA,PT,L]
+
+
+  RewriteCond %{REQUEST_FILENAME} !\.(jpg|jpeg|png|gif|bmp)$ 
+  RewriteRule /thumb/(.*)$ /helper/img/thumb?id=$1 [NC,R,L]
 </IfModule>
